--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           style: { background: "linear-gradient(to right, #00b09b, #96c93d)" }
         }).showToast();
         setTimeout(() => {
-          window.location.href = "dashboard.html"; // <-- Yahan apna redirect page set karein
+          window.location.href = "home.html"; // <-- Yahan apna redirect page set karein
         }, 1000);
       } else {
         Toastify({
@@ -223,4 +223,5 @@
   </script>
 </body>
 </html>
+
 
