--- a/plan.html
+++ b/plan.html
@@ -203,7 +203,7 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnzBArH03zHFVquG0_ihhS05b-vXXXkdBD4A&s" alt="Trainer 1">
     <div class="trainer-info">
       <h2>Shubham Kochle</h2>
-      <pSubham kochale is one of our experienced and famous trainers. He believes that "Roz subha sabse pehle ek glass dhoodh" then oggy shoes then intense workout with "15 rupees wali eentt (bricks)".He loves to do exercise with eent and especially "Ghar ka gate".</p>
+      <p>Subham kochale is one of our experienced and famous trainers. He believes that "Roz subha sabse pehle ek glass dhoodh" then oggy shoes then intense workout with "15 rupees wali eentt (bricks)".He loves to do exercise with eent and especially "Ghar ka gate".</p>
     </div>
   </div>
 
