--- a/plan.html
+++ b/plan.html
@@ -220,7 +220,7 @@
 
   <!-- Trainer 3 -->
   <div class="trainer-section">
-    <img src="https://m.media-amazon.com/images/M/MV5BZTVmYWU5NWMtNTE5My00YzZkLTkwMzAtNWI4OWYzNGNjZmFiXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Trainer 3">
+    <img src="gymtra3" alt="Trainer 3">
     <div class="trainer-info">
       <h2>Nadia ka shohar</h2>
       <p>Recently he got shocked when he know that there is no nadia there is a guy who's trying to be nadia.
