--- a/plan.html
+++ b/plan.html
@@ -220,7 +220,7 @@
 
   <!-- Trainer 3 -->
   <div class="trainer-section">
-    <img src="GYMTR3" alt="Trainer 3">
+    <img src="GYMTR3.jpeg" alt="Trainer 3">
     <div class="trainer-info">
       <h2>Nadia ka shohar</h2>
       <p>Recently he got shocked when he know that there is no nadia there is a guy who's trying to be nadia.
