--- a/home.html
+++ b/home.html
@@ -38,8 +38,8 @@
     <div class="container nav-inner">
       <a class="brand" href="#">POWERHUB</a>
       <nav class="links" aria-label="Main navigation">
-        <a href="#" class="active">Home</a>
-        <a href="about.html">About Us</a>
+        <a href="home.html" class="active">Home</a>
+        <a href="CONTACTUS.html">About Us</a>
         <a href="plan.html">Trainers</a>
         <a href="contactus1.html">Contact Us</a>
       </nav>
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
