--- a/contactus1.html
+++ b/contactus1.html
@@ -166,7 +166,7 @@
       <a href="#" class="brand">POWERHUB</a>
       <div class="links">
         <a href="home.html">Home</a>
-        <a href=".html">About us</a>
+        <a href="CONTACTUS.html">About us</a>
         <a href="plan.html">Trainers</a>
         <a href="contactus1.html" class="active">Contact Us</a>
       </div>
@@ -201,3 +201,4 @@
 </body>
 
 </html>
+
