--- a/plan.html
+++ b/plan.html
@@ -188,8 +188,8 @@
       <a href="home.html" class="logo">POWERHUB</a>
       <div class="links">
         <a href="home.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="trainers.html" class="active">Trainers</a>
+        <a href="CONTACTUS.html">About Us</a>
+        <a href="PLAN.html" class="active">Trainers</a>
         <a href="contactus1.html">Contact Us</a>
       </div>
     </div>
