--- a/CONTACTUS.html
+++ b/CONTACTUS.html
@@ -185,8 +185,8 @@
       <div class="nav-links">
         <a href="home.html">Home</a>
         <a href="CONTACTUS.html" class="active">About Us</a>
-        <a href="trainers.html">Trainers</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="plan.html">Trainers</a>
+        <a href="contactus1.html">Contact Us</a>
       </div>
     </nav>
 
@@ -268,4 +268,5 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
+
 </html>
