--- a/plan.html
+++ b/plan.html
@@ -256,7 +256,7 @@
 
   <!-- Trainer 3 -->
   <div class="trainer-section">
-    <img src="GYMTR3" alt="Trainer 3">
+    <img src="GYMTR3.jpeg" alt="Trainer 3">
     <div class="trainer-info">
       <h2>Nadia ka shohar</h2>
       <p>Recently he got shocked when he knew that there is no Nadia — there is a guy pretending to be her. Heartbroken, he’s now ready to transform himself and our gym members with new energy.</p>
