--- a/CONTACTUS.html
+++ b/CONTACTUS.html
@@ -208,7 +208,7 @@
         </div>
 
         <div class="cta">
-          <a href="seeplan.html" class="btn btn-primary">Join Now</a>
+          <a href="joinnow.html" class="btn btn-primary">Join Now</a>
         </div>
       </div>
 
@@ -273,3 +273,4 @@
   </script>
 </body>
 </html>
+
