--- a/contactus1.html
+++ b/contactus1.html
@@ -179,7 +179,8 @@
     <p>We’d love to hear from you! Reach out to us through any of the following methods:</p>
 
     <div class="contact-info">
-      <p><strong>Email:</strong> contact@powerhubfit.com</p>
+      <p><strong>Email:</strong> powerhub@gym.com</p>
+      <p><strong>Address:</strong> Somaiya,Vidyavihar east, Mumbai, Maharashtra-400077</p>
       <p><strong>Phone:</strong> +91 98765 43210</p>
     </div>
 
@@ -201,4 +202,5 @@
 </body>
 
 </html>
+
 
