--- a/plan.html
+++ b/plan.html
@@ -264,7 +264,7 @@
     </div>
   </div>
 
-  <!-- Trainer 4 -->
+  <!--
   <div class="trainer-section">
     <img src="gymtrainer.jpeg" alt="Trainer 4">
     <div class="trainer-info">
@@ -273,6 +273,7 @@
       <button class="book-btn" onclick="bookSlot()">Book Slot</button>
     </div>
   </div>
+   Trainer 4 -->
 
   <footer>© 2025 PowerHub Gym. All rights reserved.</footer>
 
