--- a/plan.html
+++ b/plan.html
@@ -244,7 +244,7 @@
     </div>
   </div>
 
-  <!-- Trainer 2 -->
+  <!-- 
   <div class="trainer-section">
     <img src="https://images.hindustantimes.com/rf/image_size_630x354/HT/p2/2020/08/30/Pictures/_838b3fb0-ea84-11ea-b0d0-732c2aa3f4c8.jpg" alt="Trainer 2">
     <div class="trainer-info">
@@ -253,7 +253,7 @@
       <button class="book-btn" onclick="bookSlot()">Book Slot</button>
     </div>
   </div>
-
+ Trainer 1 -->
   <!-- Trainer 3 -->
   <div class="trainer-section">
     <img src="GYMTR3.jpeg" alt="Trainer 3">
