--- a/plan.html
+++ b/plan.html
@@ -39,6 +39,7 @@
       z-index:-1;
     }
 
+    /* ===== Navbar ===== */
     nav {
       position: sticky; top:0; z-index: 120;
       backdrop-filter: blur(10px);
@@ -77,6 +78,7 @@
       transform: translateY(-2px);
     }
 
+    /* ===== Page Header ===== */
     h1 {
       text-align: center;
       font-size: 50px;
@@ -99,6 +101,7 @@
       line-height: 1.6;
     }
 
+    /* ===== Trainer Cards ===== */
     .trainer-section {
       display: flex;
       align-items: center;
@@ -111,7 +114,7 @@
       width: 85%;
       border: 1px solid rgba(255,255,255,0.04);
       box-shadow: var(--shadow-strong);
-      backdrop-filter: blur(14px saturate(160%));
+      backdrop-filter: blur(14px) saturate(160%);
       transition: all 0.3s ease;
     }
     .trainer-section:hover {
@@ -148,6 +151,7 @@
       margin-bottom: 15px;
     }
 
+    /* ===== Book Button ===== */
     .book-btn {
       background: var(--accent-red);
       border: none;
@@ -166,94 +170,55 @@
       transform: scale(1.05);
     }
 
-    /* ===== Footer ===== */
     footer {
-      background: linear-gradient(180deg, var(--bg-mid), var(--bg-bot));
-      color: var(--muted);
-      padding: 60px 20px 30px;
-      border-top: 1px solid rgba(255,255,255,0.05);
-      box-shadow: 0 -8px 20px rgba(0,0,0,0.4);
-    }
-
-    .footer-container {
-      max-width: var(--container);
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 40px;
-      text-align: left;
-    }
-
-    .footer-col {
-      flex: 1 1 300px;
-      min-width: 250px;
-    }
-
-    .footer-col h3 {
-      color: var(--accent-red);
-      font-size: 20px;
-      margin-bottom: 14px;
-    }
-
-    .footer-col p, .footer-col a {
-      font-size: 15px;
-      color: var(--muted);
-      line-height: 1.6;
-      text-decoration: none;
-    }
-
-    .footer-col ul {
-      list-style: none;
-      padding-left: 0;
-    }
-
-    .footer-col ul li {
-      margin-bottom: 8px;
-    }
-
-    .footer-col ul li a:hover {
-      color: #fff;
-    }
-
-    .social-links {
-      display: flex;
-      gap: 15px;
-      margin-top: 10px;
-    }
-
-    .social-links img {
-      width: 28px;
-      height: 28px;
-      filter: brightness(0.8);
-      transition: all 0.3s ease;
-    }
-
-    .social-links img:hover {
-      transform: scale(1.15);
-      filter: drop-shadow(0 0 8px var(--accent-red-2)) brightness(1);
-    }
-
-    .footer-bottom {
       text-align: center;
-      margin-top: 40px;
-      font-size: 13px;
-      opacity: 0.8;
+      margin: 60px 0 20px;
+      color: var(--muted);
+      font-size: 14px;
+      border-top: 1px solid rgba(255,255,255,0.05);
+      padding-top: 20px;
     }
 
-    @media (max-width: 780px) {
-      .footer-container {
+    /* ===== Toast Notification ===== */
+    .toast {
+      position: fixed;
+      bottom: -60px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: var(--accent-red);
+      color: #fff;
+      padding: 14px 30px;
+      border-radius: 30px;
+      font-weight: 600;
+      box-shadow: 0 0 20px rgba(255,23,68,0.4);
+      opacity: 0;
+      transition: all 0.4s ease;
+      z-index: 9999;
+    }
+    .toast.show {
+      bottom: 40px;
+      opacity: 1;
+    }
+
+    /* ===== Responsive ===== */
+    @media (max-width: 760px) {
+      .trainer-section {
         flex-direction: column;
         text-align: center;
       }
-      .social-links {
-        justify-content: center;
+      .trainer-section img {
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
+      .trainer-info {
+        max-width: 90%;
       }
     }
   </style>
 </head>
 <body>
 
+  <!-- 🔹 Navigation Bar -->
   <nav>
     <div class="nav-inner">
       <a href="home.html" class="logo">POWERHUB</a>
@@ -269,7 +234,7 @@
   <h1><span>Meet</span> Our Trainers</h1>
   <p class="intro">Elite professionals who blend discipline, power, and precision to help you unleash your inner beast.</p>
 
-  <!-- Trainers -->
+  <!-- Trainer 1 -->
   <div class="trainer-section">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnzBArH03zHFVquG0_ihhS05b-vXXXkdBD4A&s" alt="Trainer 1">
     <div class="trainer-info">
@@ -279,6 +244,7 @@
     </div>
   </div>
 
+  <!-- Trainer 2 -->
   <div class="trainer-section">
     <img src="https://images.hindustantimes.com/rf/image_size_630x354/HT/p2/2020/08/30/Pictures/_838b3fb0-ea84-11ea-b0d0-732c2aa3f4c8.jpg" alt="Trainer 2">
     <div class="trainer-info">
@@ -288,6 +254,7 @@
     </div>
   </div>
 
+  <!-- Trainer 3 -->
   <div class="trainer-section">
     <img src="GYMTR3" alt="Trainer 3">
     <div class="trainer-info">
@@ -297,53 +264,20 @@
     </div>
   </div>
 
+  <!-- 
   <div class="trainer-section">
     <img src="gymtrainer.jpeg" alt="Trainer 4">
     <div class="trainer-info">
       <h2>Subhan Khan</h2>
-      <p>Bhai call utha liya kar aur uth Jaya kar aur belt treatment ke baad toh uth Jaya hi kar warna next time homepage ki full screen par aayega.</p>
+      <p>Bhai call utha liya kar aur uth Jaya kar warna aur belt treatment ke baad toh uth Jaya hi kar warna next time homepage ki full screen par aayega.</p>
       <button class="book-btn" onclick="bookSlot()">Book Slot</button>
     </div>
   </div>
+Trainer 4 -->
+  <footer>© 2025 PowerHub Gym. All rights reserved.</footer>
 
-  <!-- Footer -->
-  <footer>
-    <div class="footer-container">
-      <div class="footer-col">
-        <h3>PowerHub Gym</h3>
-        <p>Push harder than yesterday if you want a different tomorrow. Strength, Discipline, and Growth — all under one roof.</p>
-        <div class="social-links">
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"></a>
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter"></a>
-        </div>
-      </div>
-
-      <div class="footer-col">
-        <h3>Opening Hours</h3>
-        <p>Mon - Fri: 5:00 AM – 10:00 PM</p>
-        <p>Saturday: 6:00 AM – 8:00 PM</p>
-        <p>Sunday: Closed</p>
-      </div>
-
-      <div class="footer-col">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="trainers.html">Trainers</a></li>
-          <li><a href="contactus1.html">Contact Us</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      © 2025 PowerHub Gym. All rights reserved.
-    </div>
-  </footer>
-
-  <div id="toast" class="toast">🎉 Congratulations! Your slot is booked for tomorrow.</div>
+  <!-- 🔔 Toast Element -->
+  <div id="toast" class="toast">🎉 Congratulations! Your slot is booked.</div>
 
   <script>
     function bookSlot() {
