--- a/plan.html
+++ b/plan.html
@@ -254,7 +254,7 @@
     </div>
   </div>
 
-  <!-- Trainer 3 -->
+  <!-- 
   <div class="trainer-section">
     <img src="GYMTR3.jpeg" alt="Trainer 3">
     <div class="trainer-info">
@@ -262,7 +262,7 @@
       <p>Recently he got shocked when he knew that there is no Nadia — there is a guy pretending to be her. Heartbroken, he’s now ready to transform himself and our gym members with new energy.</p>
       <button class="book-btn" onclick="bookSlot()">Book Slot</button>
     </div>
-  </div>
+  </div> Trainer 3 -->
 
   <!-- 
   <div class="trainer-section">
