--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
   <!-- HERO -->
   <section class="hero" id="home">
     <video class="hero-video" autoplay muted loop playsinline>
-      <source src="assets/hero-loop.mp4" type="video/mp4">
+      <source src="gym.jpg" type="video/mp4">
     </video>
     <div class="hero-overlay"></div>
 
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
