--- a/plan.html
+++ b/plan.html
@@ -265,7 +265,7 @@
       <button class="book-btn" onclick="bookSlot()">Book Slot</button>
     </div>
   </div> 
-  <!-- rainer 4 -->
+  <!-- 
   <div class="trainer-section">
     <img src="gymtrainer.jpeg" alt="Trainer 4">
     <div class="trainer-info">
@@ -273,7 +273,7 @@
       <p>Bhai call utha liya kar aur uth Jaya kar warna aur belt treatment ke baad toh uth Jaya hi kar warna next time homepage ki full screen par aayega.</p>
       <button class="book-btn" onclick="bookSlot()">Book Slot</button>
     </div>
-  </div>
+  </div> rainer 4 -->
 
   <footer>© 2025 PowerHub Gym. All rights reserved.</footer>
 
